Many more fixes; mods stable, oregen about right.

--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -16,7 +16,7 @@ battery {
 
 
 client {
-    # Possible Values: AE, MJ, EU, WA, RF, MK
+    # Possible Values: AE, EU, WA, RF, MK
     S:PowerUnit=WA
 
     # Possible Values: AUTOSEARCH, MANUAL_SEARCH, NEI_AUTOSEARCH, NEI_MANUAL_SEARCH
@@ -65,6 +65,7 @@ client {
 
     # Controls buttons on Priority Screen : Capped at 9999
     I:priorityAmtButton4=1000
+    B:useColoredCraftingStatus=true
     B:useTerminalUseLargeFont=false
 }
 
