--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3633,6 +3633,7 @@ chromaticraft {
     B:chromaticraftblockender=false
     B:chromaticraftblockfence=false
     B:chromaticraftblockglow=false
+    B:chromaticraftblockheatlamp=false
     B:chromaticraftblockhive=true
     B:chromaticraftblocklamp=false
     B:chromaticraftblocklampblock=false
@@ -3656,6 +3657,7 @@ chromaticraft {
     B:chromaticraftblocktieredore.1=true
     B:chromaticraftblocktieredore.10=true
     B:chromaticraftblocktieredore.11=true
+    B:chromaticraftblocktieredore.12=true
     B:chromaticraftblocktieredore.2=true
     B:chromaticraftblocktieredore.3=true
     B:chromaticraftblocktieredore.4=true
@@ -4229,11 +4231,14 @@ extrautilities {
     B:cursedearthside=false
     B:curtains=false
     B:darkportal=false
+    B:darkportal.2=false
     B:decorativeBlock1=true
     B:decorativeBlock1.1=true
     B:decorativeBlock1.10=true
     B:decorativeBlock1.11=true
     B:decorativeBlock1.12=true
+    B:decorativeBlock1.13=true
+    B:decorativeBlock1.14=true
     B:decorativeBlock1.2=true
     B:decorativeBlock1.3=true
     B:decorativeBlock1.4=true
@@ -4245,6 +4250,7 @@ extrautilities {
     B:decorativeBlock2=false
     B:decorativeBlock2.1=false
     B:decorativeBlock2.10=false
+    B:decorativeBlock2.11=false
     B:decorativeBlock2.2=false
     B:decorativeBlock2.3=false
     B:decorativeBlock2.4=false
@@ -4843,6 +4849,7 @@ gardencore {
 
 
 gardenstuff {
+    B:bloomeryfurnace=false
     B:fence=false
     B:fence.1=false
     B:fence.2=false
@@ -4891,22 +4898,30 @@ gardentrees {
     B:thinlog.1112=false
     B:thinlog.1114=false
     B:thinlog.1115=false
+    B:thinlog.1117=false
+    B:thinlog.1119=false
     B:thinlog.1127=false
     B:thinlog.1128=false
+    B:thinlog.1133=false
+    B:thinlog.1135=false
     B:thinlog.1228=false
     B:thinlog.1232=false
     B:thinlog.1244=false
     B:thinlog.1248=false
     B:thinlog.12699=false
+    B:thinlog.12701=false
     B:thinlog.12715=false
     B:thinlog.12716=false
     B:thinlog.12741=false
+    B:thinlog.12743=false
     B:thinlog.12849=false
     B:thinlog.12850=false
     B:thinlog.12851=false
     B:thinlog.12852=false
     B:thinlog.12853=false
     B:thinlog.12854=false
+    B:thinlog.12855=false
+    B:thinlog.12856=false
     B:thinlog.12873=false
     B:thinlog.12883=false
     B:thinlog.12909=false
@@ -4921,8 +4936,12 @@ gardentrees {
     B:thinlog.13400=false
     B:thinlog.13402=false
     B:thinlog.13403=false
+    B:thinlog.13405=false
+    B:thinlog.13407=false
     B:thinlog.13415=false
     B:thinlog.13416=false
+    B:thinlog.13421=false
+    B:thinlog.13423=false
     B:thinlog.13516=false
     B:thinlog.13520=false
     B:thinlog.13532=false
@@ -4932,24 +4951,35 @@ gardentrees {
     B:thinlog.4=false
     B:thinlog.411=false
     B:thinlog.412=false
+    B:thinlog.413=false
+    B:thinlog.414=false
     B:thinlog.424=false
+    B:thinlog.426=false
     B:thinlog.427=false
     B:thinlog.428=false
     B:thinlog.429=false
     B:thinlog.435=false
+    B:thinlog.437=false
     B:thinlog.4507=false
     B:thinlog.4508=false
+    B:thinlog.4509=false
+    B:thinlog.4510=false
     B:thinlog.4523=false
     B:thinlog.4524=false
     B:thinlog.453=false
     B:thinlog.4531=false
+    B:thinlog.4533=false
     B:thinlog.4549=false
+    B:thinlog.455=false
+    B:thinlog.4551=false
     B:thinlog.4657=false
     B:thinlog.4658=false
     B:thinlog.4659=false
     B:thinlog.4660=false
     B:thinlog.4661=false
     B:thinlog.4662=false
+    B:thinlog.4663=false
+    B:thinlog.4664=false
     B:thinlog.4681=false
     B:thinlog.4682=false
     B:thinlog.4691=false
@@ -4963,6 +4993,8 @@ gardentrees {
     B:thinlog.4865=false
     B:thinlog.4867=false
     B:thinlog.4881=false
+    B:thinlog.4883=false
+    B:thinlog.4885=false
     B:thinlog.5=false
     B:thinlog.5184=false
     B:thinlog.5190=false
@@ -4974,8 +5006,12 @@ gardentrees {
     B:thinlog.5208=false
     B:thinlog.5210=false
     B:thinlog.5211=false
+    B:thinlog.5213=false
+    B:thinlog.5215=false
     B:thinlog.5223=false
     B:thinlog.5224=false
+    B:thinlog.5229=false
+    B:thinlog.5231=false
     B:thinlog.5324=false
     B:thinlog.5328=false
     B:thinlog.5340=false
@@ -4986,6 +5022,8 @@ gardentrees {
     B:thinlog.564=false
     B:thinlog.565=false
     B:thinlog.566=false
+    B:thinlog.567=false
+    B:thinlog.568=false
     B:thinlog.585=false
     B:thinlog.586=false
     B:thinlog.592=false
@@ -4995,6 +5033,7 @@ gardentrees {
     B:thinlog.603=false
     B:thinlog.613=false
     B:thinlog.61872=false
+    B:thinlog.61874=false
     B:thinlog.62040=false
     B:thinlog.62050=false
     B:thinlog.621=false
@@ -5004,16 +5043,22 @@ gardentrees {
     B:thinlog.769=false
     B:thinlog.771=false
     B:thinlog.785=false
+    B:thinlog.787=false
+    B:thinlog.789=false
     B:thinlog.8603=false
+    B:thinlog.8605=false
     B:thinlog.8619=false
     B:thinlog.8620=false
     B:thinlog.8645=false
+    B:thinlog.8647=false
     B:thinlog.8753=false
     B:thinlog.8754=false
     B:thinlog.8755=false
     B:thinlog.8756=false
     B:thinlog.8757=false
     B:thinlog.8758=false
+    B:thinlog.8759=false
+    B:thinlog.8760=false
     B:thinlog.8777=false
     B:thinlog.8787=false
     B:thinlog.8813=false
@@ -5028,8 +5073,12 @@ gardentrees {
     B:thinlog.9304=false
     B:thinlog.9306=false
     B:thinlog.9307=false
+    B:thinlog.9309=false
+    B:thinlog.9311=false
     B:thinlog.9319=false
     B:thinlog.9320=false
+    B:thinlog.9325=false
+    B:thinlog.9327=false
     B:thinlog.9420=false
     B:thinlog.9424=false
     B:thinlog.9436=false
@@ -5046,22 +5095,30 @@ gardentrees {
     B:thinlogfence.1112=false
     B:thinlogfence.1114=false
     B:thinlogfence.1115=false
+    B:thinlogfence.1117=false
+    B:thinlogfence.1119=false
     B:thinlogfence.1127=false
     B:thinlogfence.1128=false
+    B:thinlogfence.1133=false
+    B:thinlogfence.1135=false
     B:thinlogfence.1228=false
     B:thinlogfence.1232=false
     B:thinlogfence.1244=false
     B:thinlogfence.1248=false
     B:thinlogfence.12699=false
+    B:thinlogfence.12701=false
     B:thinlogfence.12715=false
     B:thinlogfence.12716=false
     B:thinlogfence.12741=false
+    B:thinlogfence.12743=false
     B:thinlogfence.12849=false
     B:thinlogfence.12850=false
     B:thinlogfence.12851=false
     B:thinlogfence.12852=false
     B:thinlogfence.12853=false
     B:thinlogfence.12854=false
+    B:thinlogfence.12855=false
+    B:thinlogfence.12856=false
     B:thinlogfence.12873=false
     B:thinlogfence.12883=false
     B:thinlogfence.12909=false
@@ -5076,8 +5133,12 @@ gardentrees {
     B:thinlogfence.13400=false
     B:thinlogfence.13402=false
     B:thinlogfence.13403=false
+    B:thinlogfence.13405=false
+    B:thinlogfence.13407=false
     B:thinlogfence.13415=false
     B:thinlogfence.13416=false
+    B:thinlogfence.13421=false
+    B:thinlogfence.13423=false
     B:thinlogfence.13516=false
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
@@ -5087,24 +5148,35 @@ gardentrees {
     B:thinlogfence.4=false
     B:thinlogfence.411=false
     B:thinlogfence.412=false
+    B:thinlogfence.413=false
+    B:thinlogfence.414=false
     B:thinlogfence.424=false
+    B:thinlogfence.426=false
     B:thinlogfence.427=false
     B:thinlogfence.428=false
     B:thinlogfence.429=false
     B:thinlogfence.435=false
+    B:thinlogfence.437=false
     B:thinlogfence.4507=false
     B:thinlogfence.4508=false
+    B:thinlogfence.4509=false
+    B:thinlogfence.4510=false
     B:thinlogfence.4523=false
     B:thinlogfence.4524=false
     B:thinlogfence.453=false
     B:thinlogfence.4531=false
+    B:thinlogfence.4533=false
     B:thinlogfence.4549=false
+    B:thinlogfence.455=false
+    B:thinlogfence.4551=false
     B:thinlogfence.4657=false
     B:thinlogfence.4658=false
     B:thinlogfence.4659=false
     B:thinlogfence.4660=false
     B:thinlogfence.4661=false
     B:thinlogfence.4662=false
+    B:thinlogfence.4663=false
+    B:thinlogfence.4664=false
     B:thinlogfence.4681=false
     B:thinlogfence.4682=false
     B:thinlogfence.4691=false
@@ -5118,6 +5190,8 @@ gardentrees {
     B:thinlogfence.4865=false
     B:thinlogfence.4867=false
     B:thinlogfence.4881=false
+    B:thinlogfence.4883=false
+    B:thinlogfence.4885=false
     B:thinlogfence.5=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
@@ -5129,8 +5203,12 @@ gardentrees {
     B:thinlogfence.5208=false
     B:thinlogfence.5210=false
     B:thinlogfence.5211=false
+    B:thinlogfence.5213=false
+    B:thinlogfence.5215=false
     B:thinlogfence.5223=false
     B:thinlogfence.5224=false
+    B:thinlogfence.5229=false
+    B:thinlogfence.5231=false
     B:thinlogfence.5324=false
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
@@ -5141,6 +5219,8 @@ gardentrees {
     B:thinlogfence.564=false
     B:thinlogfence.565=false
     B:thinlogfence.566=false
+    B:thinlogfence.567=false
+    B:thinlogfence.568=false
     B:thinlogfence.585=false
     B:thinlogfence.586=false
     B:thinlogfence.592=false
@@ -5150,6 +5230,7 @@ gardentrees {
     B:thinlogfence.603=false
     B:thinlogfence.613=false
     B:thinlogfence.61872=false
+    B:thinlogfence.61874=false
     B:thinlogfence.62040=false
     B:thinlogfence.62050=false
     B:thinlogfence.621=false
@@ -5159,16 +5240,22 @@ gardentrees {
     B:thinlogfence.769=false
     B:thinlogfence.771=false
     B:thinlogfence.785=false
+    B:thinlogfence.787=false
+    B:thinlogfence.789=false
     B:thinlogfence.8603=false
+    B:thinlogfence.8605=false
     B:thinlogfence.8619=false
     B:thinlogfence.8620=false
     B:thinlogfence.8645=false
+    B:thinlogfence.8647=false
     B:thinlogfence.8753=false
     B:thinlogfence.8754=false
     B:thinlogfence.8755=false
     B:thinlogfence.8756=false
     B:thinlogfence.8757=false
     B:thinlogfence.8758=false
+    B:thinlogfence.8759=false
+    B:thinlogfence.8760=false
     B:thinlogfence.8777=false
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
@@ -5183,8 +5270,12 @@ gardentrees {
     B:thinlogfence.9304=false
     B:thinlogfence.9306=false
     B:thinlogfence.9307=false
+    B:thinlogfence.9309=false
+    B:thinlogfence.9311=false
     B:thinlogfence.9319=false
     B:thinlogfence.9320=false
+    B:thinlogfence.9325=false
+    B:thinlogfence.9327=false
     B:thinlogfence.9420=false
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
@@ -5288,6 +5379,17 @@ geostrata {
     B:geostratarockslateconnected=true
     B:geostratarockslateconnected2=true
     B:geostratarockslatesmooth=true
+}
+
+
+grimoireofgaia {
+    B:CreeperGirlDoll=false
+    B:EnderGirlDoll=false
+    B:MaidDoll=false
+    B:SlimeGirlDoll=false
+    B:TheSphinx=false
+    B:TheValkyrie=false
+    B:TheVampire=false
 }
 
 
@@ -5509,7 +5611,12 @@ malisisdoors {
     B:blockmixer=false
     B:carriagedoor=false
     B:curtain=false
+    B:dooracacia=false
+    B:doorbirch=false
+    B:doordarkoak=false
     B:doorfactory=false
+    B:doorjungle=false
+    B:doorspruce=false
     B:factorydoor=false
     B:forcefieldDoor=false
     B:garagedoor=false
@@ -6160,6 +6267,7 @@ opencomputers {
     B:case2=false
     B:case3=false
     B:caseCreative=false
+    B:chameliumBlock=true
     B:charger=false
     B:disassembler=false
     B:diskDrive=false
@@ -6171,6 +6279,8 @@ opencomputers {
     B:motionSensor=false
     B:powerConverter=false
     B:powerDistributor=false
+    B:print=false
+    B:printer=false
     B:raid=false
     B:redstone=false
     B:robot=false
@@ -6792,11 +6902,16 @@ plantmegapack {
 
 
 pressure {
+    B:CheckValve=false
+    B:Creative=false
     B:Drain=false
     B:Input=false
     B:Output=false
     B:Pipe=false
+    B:PipeSensor=false
     B:Pump=false
+    B:Router=false
+    B:Sensor=false
     B:TankBlock=false
     B:TankController=false
     B:TankFilter=false
@@ -6820,10 +6935,18 @@ progressiveautomation {
     B:CrafterDiamond=false
     B:CrafterIron=false
     B:CrafterStone=false
+    B:Farmer=false
+    B:FarmerDiamond=false
+    B:FarmerIron=false
+    B:FarmerStone=false
     B:Generator=false
     B:GeneratorDiamond=false
     B:GeneratorIron=false
     B:GeneratorStone=false
+    B:Killer=false
+    B:KillerDiamond=false
+    B:KillerIron=false
+    B:KillerStone=false
     B:Miner=false
     B:MinerDiamond=false
     B:MinerIron=false
@@ -7227,6 +7350,13 @@ stevesworkshop {
 
 storagedrawers {
     B:compDrawers=false
+    B:controller=false
+    B:fullDrawers1=false
+    B:fullDrawers1.1=false
+    B:fullDrawers1.2=false
+    B:fullDrawers1.3=false
+    B:fullDrawers1.4=false
+    B:fullDrawers1.5=false
     B:fullDrawers2=false
     B:fullDrawers2.1=false
     B:fullDrawers2.2=false
@@ -7500,16 +7630,20 @@ tconstruct {
     B:fluidmoltencobalt=false
     B:fluidmoltencopper=false
     B:fluidmoltenelectrum=false
+    B:fluidmoltenenderium=false
     B:fluidmoltenglass=false
     B:fluidmoltengold=false
     B:fluidmolteninvar=false
     B:fluidmolteniron=false
     B:fluidmoltenlead=false
+    B:fluidmoltenlumium=false
     B:fluidmoltenmanyullyn=false
+    B:fluidmoltenmithril=false
     B:fluidmoltennickel=false
     B:fluidmoltenobsidian=false
     B:fluidmoltenpigiron=false
     B:fluidmoltenshiny=false
+    B:fluidmoltensignalum=false
     B:fluidmoltensilver=false
     B:fluidmoltensteel=false
     B:fluidmoltentin=false
@@ -7778,7 +7912,10 @@ twilightforest {
     B:tileGiantLog=true
     B:tileGiantObsidian=true
     B:tileHugeGloomBlock=true
+    B:tileHugeLilyPad=false
     B:tileHugeStalk=true
+    B:tileHugeWaterLily=false
+    B:tileKnightmetalBlock=false
     B:tileTFAuroraBrick=true
     B:tileTFBurntThorns=false
     B:tileTFCicada=false
