--- a/config/BigReactors/BigReactors.cfg
+++ b/config/BigReactors/BigReactors.cfg
@@ -1,13 +1,15 @@
 # Configuration file
 
 compatibility {
-    # If true, automatically adds all unregistered ingots found as clonesof standard yellorium fuel
     B:autoAddUranium=true
 }
 
 
 general {
+    # If true, allows weird stuff inside reactors, like MFR sewage and pink slime. Default: true
     B:enableComedy=true
+
+    # If true, allows Metallurgy's fantasy metals to be used as part of turbine coils. Default: true
     B:enableMetallurgyFantasyMetalsInTurbines=true
     D:fuelUsageMultiplier=5.0
     I:maxReactorHeight=48
