--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -304,6 +304,312 @@ shedding {
     I:Giant.lexiconDisplaySize=40
     I:Giant.metadata=0
     I:Giant.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Anubis
+    S:GrimoireOfGaia.Anubis.item=
+    I:GrimoireOfGaia.Anubis.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Anubis.metadata=0
+    I:GrimoireOfGaia.Anubis.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Banshee
+    S:GrimoireOfGaia.Banshee.item=
+    I:GrimoireOfGaia.Banshee.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Banshee.metadata=0
+    I:GrimoireOfGaia.Banshee.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Baphomet
+    S:GrimoireOfGaia.Baphomet.item=
+    I:GrimoireOfGaia.Baphomet.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Baphomet.metadata=0
+    I:GrimoireOfGaia.Baphomet.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Bone Knight
+    S:"GrimoireOfGaia.Bone Knight.item"=
+    I:"GrimoireOfGaia.Bone Knight.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Bone Knight.metadata"=0
+    I:"GrimoireOfGaia.Bone Knight.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Butler
+    S:GrimoireOfGaia.Butler.item=
+    I:GrimoireOfGaia.Butler.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Butler.metadata=0
+    I:GrimoireOfGaia.Butler.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Centaur
+    S:GrimoireOfGaia.Centaur.item=
+    I:GrimoireOfGaia.Centaur.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Centaur.metadata=0
+    I:GrimoireOfGaia.Centaur.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Cobble Golem
+    S:"GrimoireOfGaia.Cobble Golem.item"=
+    I:"GrimoireOfGaia.Cobble Golem.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Cobble Golem.metadata"=0
+    I:"GrimoireOfGaia.Cobble Golem.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Cobblestone Golem
+    S:"GrimoireOfGaia.Cobblestone Golem.item"=
+    I:"GrimoireOfGaia.Cobblestone Golem.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Cobblestone Golem.metadata"=0
+    I:"GrimoireOfGaia.Cobblestone Golem.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Cockatrice
+    S:GrimoireOfGaia.Cockatrice.item=
+    I:GrimoireOfGaia.Cockatrice.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Cockatrice.metadata=0
+    I:GrimoireOfGaia.Cockatrice.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Creep
+    S:GrimoireOfGaia.Creep.item=
+    I:GrimoireOfGaia.Creep.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Creep.metadata=0
+    I:GrimoireOfGaia.Creep.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Creeper Girl
+    S:"GrimoireOfGaia.Creeper Girl.item"=
+    I:"GrimoireOfGaia.Creeper Girl.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Creeper Girl.metadata"=0
+    I:"GrimoireOfGaia.Creeper Girl.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Cyan Flower
+    S:"GrimoireOfGaia.Cyan Flower.item"=
+    I:"GrimoireOfGaia.Cyan Flower.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Cyan Flower.metadata"=0
+    I:"GrimoireOfGaia.Cyan Flower.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Cyclops
+    S:GrimoireOfGaia.Cyclops.item=
+    I:GrimoireOfGaia.Cyclops.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Cyclops.metadata=0
+    I:GrimoireOfGaia.Cyclops.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Dhampir
+    S:GrimoireOfGaia.Dhampir.item=
+    I:GrimoireOfGaia.Dhampir.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Dhampir.metadata=0
+    I:GrimoireOfGaia.Dhampir.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Dryad
+    S:GrimoireOfGaia.Dryad.item=
+    I:GrimoireOfGaia.Dryad.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Dryad.metadata=0
+    I:GrimoireOfGaia.Dryad.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Dullahan
+    S:GrimoireOfGaia.Dullahan.item=
+    I:GrimoireOfGaia.Dullahan.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Dullahan.metadata=0
+    I:GrimoireOfGaia.Dullahan.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Ender Dragon Girl
+    S:"GrimoireOfGaia.Ender Dragon Girl.item"=
+    I:"GrimoireOfGaia.Ender Dragon Girl.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Ender Dragon Girl.metadata"=0
+    I:"GrimoireOfGaia.Ender Dragon Girl.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Ender Eye
+    S:"GrimoireOfGaia.Ender Eye.item"=
+    I:"GrimoireOfGaia.Ender Eye.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Ender Eye.metadata"=0
+    I:"GrimoireOfGaia.Ender Eye.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Flesh Lich
+    S:"GrimoireOfGaia.Flesh Lich.item"=
+    I:"GrimoireOfGaia.Flesh Lich.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Flesh Lich.metadata"=0
+    I:"GrimoireOfGaia.Flesh Lich.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.FutakuchiOnna
+    S:GrimoireOfGaia.FutakuchiOnna.item=
+    I:GrimoireOfGaia.FutakuchiOnna.lexiconDisplaySize=40
+    I:GrimoireOfGaia.FutakuchiOnna.metadata=0
+    I:GrimoireOfGaia.FutakuchiOnna.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Gryphon
+    S:GrimoireOfGaia.Gryphon.item=
+    I:GrimoireOfGaia.Gryphon.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Gryphon.metadata=0
+    I:GrimoireOfGaia.Gryphon.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Harpy
+    S:GrimoireOfGaia.Harpy.item=
+    I:GrimoireOfGaia.Harpy.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Harpy.metadata=0
+    I:GrimoireOfGaia.Harpy.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Hunter
+    S:GrimoireOfGaia.Hunter.item=
+    I:GrimoireOfGaia.Hunter.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Hunter.metadata=0
+    I:GrimoireOfGaia.Hunter.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Jorogumo
+    S:GrimoireOfGaia.Jorogumo.item=
+    I:GrimoireOfGaia.Jorogumo.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Jorogumo.metadata=0
+    I:GrimoireOfGaia.Jorogumo.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Mandragora
+    S:GrimoireOfGaia.Mandragora.item=
+    I:GrimoireOfGaia.Mandragora.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Mandragora.metadata=0
+    I:GrimoireOfGaia.Mandragora.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Mermaid
+    S:GrimoireOfGaia.Mermaid.item=
+    I:GrimoireOfGaia.Mermaid.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Mermaid.metadata=0
+    I:GrimoireOfGaia.Mermaid.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Mimic
+    S:GrimoireOfGaia.Mimic.item=
+    I:GrimoireOfGaia.Mimic.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Mimic.metadata=0
+    I:GrimoireOfGaia.Mimic.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Minotaur
+    S:GrimoireOfGaia.Minotaur.item=
+    I:GrimoireOfGaia.Minotaur.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Minotaur.metadata=0
+    I:GrimoireOfGaia.Minotaur.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Minotaurus
+    S:GrimoireOfGaia.Minotaurus.item=
+    I:GrimoireOfGaia.Minotaurus.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Minotaurus.metadata=0
+    I:GrimoireOfGaia.Minotaurus.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Naga
+    S:GrimoireOfGaia.Naga.item=
+    I:GrimoireOfGaia.Naga.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Naga.metadata=0
+    I:GrimoireOfGaia.Naga.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.NineTails
+    S:GrimoireOfGaia.NineTails.item=
+    I:GrimoireOfGaia.NineTails.lexiconDisplaySize=40
+    I:GrimoireOfGaia.NineTails.metadata=0
+    I:GrimoireOfGaia.NineTails.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Sahuagin
+    S:GrimoireOfGaia.Sahuagin.item=
+    I:GrimoireOfGaia.Sahuagin.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Sahuagin.metadata=0
+    I:GrimoireOfGaia.Sahuagin.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Satyr
+    S:GrimoireOfGaia.Satyr.item=
+    I:GrimoireOfGaia.Satyr.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Satyr.metadata=0
+    I:GrimoireOfGaia.Satyr.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Selkie
+    S:GrimoireOfGaia.Selkie.item=
+    I:GrimoireOfGaia.Selkie.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Selkie.metadata=0
+    I:GrimoireOfGaia.Selkie.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Shaman
+    S:GrimoireOfGaia.Shaman.item=
+    I:GrimoireOfGaia.Shaman.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Shaman.metadata=0
+    I:GrimoireOfGaia.Shaman.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Sharko
+    S:GrimoireOfGaia.Sharko.item=
+    I:GrimoireOfGaia.Sharko.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Sharko.metadata=0
+    I:GrimoireOfGaia.Sharko.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Siren
+    S:GrimoireOfGaia.Siren.item=
+    I:GrimoireOfGaia.Siren.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Siren.metadata=0
+    I:GrimoireOfGaia.Siren.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Slime Girl
+    S:"GrimoireOfGaia.Slime Girl.item"=
+    I:"GrimoireOfGaia.Slime Girl.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Slime Girl.metadata"=0
+    I:"GrimoireOfGaia.Slime Girl.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Sludge Girl
+    S:"GrimoireOfGaia.Sludge Girl.item"=
+    I:"GrimoireOfGaia.Sludge Girl.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Sludge Girl.metadata"=0
+    I:"GrimoireOfGaia.Sludge Girl.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Sphinx
+    S:GrimoireOfGaia.Sphinx.item=
+    I:GrimoireOfGaia.Sphinx.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Sphinx.metadata=0
+    I:GrimoireOfGaia.Sphinx.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Spriggan
+    S:GrimoireOfGaia.Spriggan.item=
+    I:GrimoireOfGaia.Spriggan.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Spriggan.metadata=0
+    I:GrimoireOfGaia.Spriggan.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Succubus
+    S:GrimoireOfGaia.Succubus.item=
+    I:GrimoireOfGaia.Succubus.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Succubus.metadata=0
+    I:GrimoireOfGaia.Succubus.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Swamper
+    S:GrimoireOfGaia.Swamper.item=
+    I:GrimoireOfGaia.Swamper.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Swamper.metadata=0
+    I:GrimoireOfGaia.Swamper.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Trader
+    S:GrimoireOfGaia.Trader.item=
+    I:GrimoireOfGaia.Trader.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Trader.metadata=0
+    I:GrimoireOfGaia.Trader.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Valkyrie
+    S:GrimoireOfGaia.Valkyrie.item=
+    I:GrimoireOfGaia.Valkyrie.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Valkyrie.metadata=0
+    I:GrimoireOfGaia.Valkyrie.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Vampire
+    S:GrimoireOfGaia.Vampire.item=
+    I:GrimoireOfGaia.Vampire.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Vampire.metadata=0
+    I:GrimoireOfGaia.Vampire.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Werecat
+    S:GrimoireOfGaia.Werecat.item=
+    I:GrimoireOfGaia.Werecat.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Werecat.metadata=0
+    I:GrimoireOfGaia.Werecat.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Witch
+    S:GrimoireOfGaia.Witch.item=
+    I:GrimoireOfGaia.Witch.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Witch.metadata=0
+    I:GrimoireOfGaia.Witch.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Wither Cow
+    S:"GrimoireOfGaia.Wither Cow.item"=
+    I:"GrimoireOfGaia.Wither Cow.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Wither Cow.metadata"=0
+    I:"GrimoireOfGaia.Wither Cow.rate"=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Yeti
+    S:GrimoireOfGaia.Yeti.item=
+    I:GrimoireOfGaia.Yeti.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Yeti.metadata=0
+    I:GrimoireOfGaia.Yeti.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Yuki-Onna
+    S:GrimoireOfGaia.Yuki-Onna.item=
+    I:GrimoireOfGaia.Yuki-Onna.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Yuki-Onna.metadata=0
+    I:GrimoireOfGaia.Yuki-Onna.rate=-1
     S:HardcoreEnderExpansion.AngryEnderman.item=
     I:HardcoreEnderExpansion.AngryEnderman.lexiconDisplaySize=40
     I:HardcoreEnderExpansion.AngryEnderman.metadata=0
