--- a/config/DIAdvancedCompatibility.cfg
+++ b/config/DIAdvancedCompatibility.cfg
@@ -868,6 +868,572 @@ extrabiomesxl {
 }
 
 
+"grimoire of gaia 3" {
+
+    "cyan flower" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    sharko {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    minotaur {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    yukionna {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    banshee {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "cobble golem" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    siren {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    yeti {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    spriggan {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    anubis {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    selkie {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    cyclops {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "bone knight" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    vampire {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    trader {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    dryad {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    mandragora {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    sahuagin {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "ender dragon girl" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    centaur {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "ender eye" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    dullahan {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    mermaid {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    succubus {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    gryphon {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "wither cow" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "cobblestone golem" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    swamper {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    mimic {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    futakuchionna {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "sludge girl" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    shaman {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    butler {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    werecat {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    witch {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    ninetails {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "flesh lich" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    creep {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    harpy {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    valkyrie {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    hunter {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "slime girl" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    jorogumo {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    cockatrice {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    minotaurus {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    "creeper girl" {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    baphomet {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    dhampir {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    sphinx {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    naga {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+    satyr {
+        B:Append_Baby_Name=true
+        D:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+}
+
+
 "hardcore ender expansion" {
 
     hauntedminer {
