--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -87,6 +87,8 @@ options {
     B:disableEnderPumpInAllDimensions=false
     B:disableTransferNodeParticles=false
     B:disableWitherNoisesIfNotNearby=true
+    I:lastMilleniumDimensionID=-112
+    B:peacefulTableInAllDifficulties=false
     B:soulDrainResetsOnDeath=false
     B:unstableIngotsExplode=true
 }
