--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -25,6 +25,7 @@
     B:"Generate Pylons in MystCraft Worlds"=false
     B:"Generate Some Pylons as Broken"=false
     I:"Guardian Stone Range"=16
+    B:"Guardian Stone is Full Chunk Height"=false
     B:"Lamp Noises"=true
     B:"Liquid Ender Effect"=true
     I:"Lumen Relay Range"=16
