--- a/config/progressiveautomation.cfg
+++ b/config/progressiveautomation.cfg
@@ -13,8 +13,14 @@ blocks {
     # Crafter Block is enabled (requires restart) [default: true]
     B:crafter=true
 
+    # Killer Block is enabled (requires restart) [default: true]
+    B:farmer=true
+
     # Generator Block is enabled (requires restart) [default: true]
     B:generator=true
+
+    # Animal Farmer Block is enabled (requires restart) [default: true]
+    B:killer=true
 
     # Miner Block is enabled (requires restart) [default: true]
     B:miner=true
@@ -31,8 +37,17 @@ blocks {
 ##########################################################################################################
 
 general {
+    # Allow Potatos to be used as a fuel source in PA machines [default: true]
+    B:allowPotatos=true
+
+    # Allows the wrench, you've got to be seriously evil to not allow this! [default: true]
+    B:allowWrench=true
+
     # Allow coal pellets (requires restart) [default: true]
     B:coalPellets=true
+
+    # Changing to false will make the machines spit a fully broken vanilla tool into it's inventory [default: true]
+    B:destroyTools=true
 
     # Set to false to disable RF support in this mod [default: true]
     B:enableRF=false
@@ -98,6 +113,15 @@ upgrades {
 
     # Allow iron level blocks (requires restart) [default: true]
     B:iron=true
+
+    # Allow the Killer to kill players [default: true]
+    B:killPlayer=true
+
+    # Allow the milker upgrade (requires restart) [default: true]
+    B:milker=true
+
+    # Allow the shearing upgrade (requires restart) [default: true]
+    B:shearing=true
 
     # Allow stone level blocks (requires restart) [default: true]
     B:stone=true
