--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -54,6 +54,7 @@ modules {
     B:computronics.enableRelayBound=true
     B:computronics.enableTape=true
     B:computronics.enableTapeName=true
+    B:extrautilities.fluidamount=true
     B:facades.hidden=true
     B:general.showcrop=true
     B:general.showhp=true
@@ -119,6 +120,7 @@ server_forcing {
     B:computronics.enableRelayBound=false
     B:computronics.enableTape=false
     B:computronics.enableTapeName=false
+    B:extrautilities.fluidamount=false
     B:facades.hidden=false
     B:general.showcrop=false
     B:general.showhp=false
