--- a/config/roguelike_dungeons/roguelike.cfg
+++ b/config/roguelike_dungeons/roguelike.cfg
@@ -4,6 +4,7 @@ levelMaxRooms=30
 spawnFrequency=10
 dimensionBL=
 preciousBlocks=true
+doNoveltySpawn=true
 levelScatter=10
 generous=false
 doNaturalSpawn=true
