--- a/config/ttCore.cfg
+++ b/config/ttCore.cfg
@@ -10,6 +10,9 @@ enchants {
 
 
 general {
+    # Disabling this option will prevent any crops added to the config json from being right clickable.
+    B:allowCropRC=true
+
     # The max amount of XP levels an anvil recipe can use
     I:anvilMaxLevel=40
 
@@ -27,6 +30,11 @@ general {
 
     # The way the game should have been made.
     B:superDuperFunMode=true
+
+    # 0 - Do nothing
+    # 1 - Remove stacktraces, leave 1-line missing texture errors
+    # 2 - Remove all missing texture errors completely
+    I:textureErrorRemover=1
 }
 
 
